[gd_scene load_steps=17 format=3 uid="uid://cai7vmxeve1b0"]

[ext_resource type="Script" path="res://scripts/hidden_heal.gd" id="1_bq586"]
[ext_resource type="Texture2D" uid="uid://cax1s3vm8idlb" path="res://assets/art/tilesets/plains.png" id="2_f782w"]
[ext_resource type="Texture2D" uid="uid://ce230qyugsh85" path="res://assets/art/tilesets/grass.png" id="3_mlc16"]
[ext_resource type="Texture2D" uid="uid://dgg0oj3muujej" path="res://assets/art/objects/objects.png" id="4_5nd0r"]
[ext_resource type="Texture2D" uid="uid://byixfkid4hpf3" path="res://assets/art/heal_potion.png" id="5_r8uvg"]
[ext_resource type="AudioStream" uid="uid://dit448i3g86ng" path="res://assets/sound_effects/heal.mp3" id="6_ueo2y"]
[ext_resource type="PackedScene" uid="uid://v4hrjcqkel1b" path="res://scenes/player.tscn" id="7_1ucc3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n1c6a"]
texture = ExtResource("2_f782w")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
1:1/0 = 0
2:1/0 = 0
4:0/0 = 0
4:1/0 = 0
5:1/0 = 0
5:0/0 = 0
1:4/0 = 0
1:5/0 = 0
2:5/0 = 0
2:6/0 = 0
3:6/0 = 0
3:5/0 = 0
3:4/0 = 0
2:4/0 = 0
1:6/0 = 0
4:4/0 = 0
4:5/0 = 0
4:6/0 = 0
5:6/0 = 0
5:5/0 = 0
5:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iceet"]
texture = ExtResource("3_mlc16")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1v4bv"]
texture = ExtResource("4_5nd0r")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.87782, 2.91682, 5.87782, 2.91682, 1.81196, 4.86136, -1.81196, 4.86136)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.8125, -2.75, 0.6875, -0.375, 6.8125, -1.875, 6.4375, 3.375, 3.1875, 6.625, -1.1875, 6.875, -6.8125, 3.875, -8, 0.25)
5:0/0 = 0
5:0/0/y_sort_origin = 5
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.11526, 0.972272, 7.02687, 1.06066, 6.93849, 6.01041, -7.20365, 5.92202)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1875, 25.875, -11.6875, 22.5, -11.9375, 18.875, -11.6875, 15.125, -9.6875, 13.25, 7.4375, 12.25, 11.8125, 18.5, 11.9375, 21.5, 9.8125, 25.75)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.8125, 14.75, -11.8125, 13.25, -15.5625, 10.25, -15.8125, 6.875, 15.5625, 6.125, 15.6875, 8.75, 10.3125, 13.625, 0.0625, 14.875)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.8125, 18, -5.78944, 20.5945, -1.8125, 21.875, 1.63519, 21.8319, 5.96622, 20.7713, 5.87783, 18.2964, -0.4375, 16.625)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 5
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.5625, -8, 5.5625, -8, 11.6875, 1.375, 11.5625, 4.5, 9.4375, 9, -6.8125, 9, -11.9375, 5.625, -12.3125, -1.875)

[sub_resource type="TileSet" id="TileSet_pehc0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_n1c6a")
sources/1 = SubResource("TileSetAtlasSource_iceet")
sources/2 = SubResource("TileSetAtlasSource_1v4bv")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d76bt"]
size = Vector2(11, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjrdw"]
size = Vector2(50.5, 16.5)

[sub_resource type="Animation" id="Animation_4d21h"]
resource_name = "taken"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("heal/heal_taken:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("heal")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_w6h4f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("heal/heal_taken:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jtjd"]
_data = {
"RESET": SubResource("Animation_w6h4f"),
"taken": SubResource("Animation_4d21h")
}

[node name="hidden_heal" type="Node2D"]
script = ExtResource("1_bq586")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_pehc0")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(2, 1, 0, 65538, 1, 0, 196610, 1, 0, 262146, 65536, 0, 327682, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 524290, 65536, 1, 589826, 65536, 2, 655362, 1, 0, 720898, 1, 0, 3, 1, 0, 65539, 1, 0, 196611, 1, 0, 262147, 131072, 0, 327683, 131072, 1, 393219, 131072, 1, 458755, 131072, 1, 524291, 131072, 1, 589827, 131072, 2, 655363, 1, 0, 720899, 1, 0, 4, 1, 0, 65540, 1, 0, 196612, 1, 0, 262148, 131072, 0, 327684, 131072, 1, 393220, 131072, 1, 458756, 131072, 1, 524292, 131072, 1, 589828, 327680, 0, 655364, 65536, 2, 720900, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 131072, 0, 327685, 131072, 1, 393221, 131072, 1, 458757, 131072, 1, 524293, 131072, 1, 589829, 131072, 1, 655365, 131072, 2, 720901, 1, 0, 65542, 1, 0, 131078, 65536, 0, 196614, 65536, 1, 262150, 327680, 1, 327686, 131072, 1, 393222, 131072, 1, 458758, 131072, 1, 524294, 131072, 1, 589830, 131072, 1, 655366, 131072, 2, 720902, 1, 0, 786438, 1, 0, 65543, 1, 0, 131079, 131072, 0, 196615, 131072, 1, 262151, 131072, 1, 327687, 131072, 1, 393223, 131072, 1, 458759, 131072, 1, 524295, 262144, 0, 589831, 196608, 1, 655367, 196608, 2, 720903, 1, 0, 786439, 1, 0, 65544, 1, 0, 131080, 196608, 0, 196616, 196608, 1, 262152, 196608, 1, 327688, 196608, 1, 393224, 196608, 1, 458760, 196608, 1, 524296, 196608, 2, 589832, 1, 0, 655368, 1, 0, 720904, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 655369, 1, 0, 720905, 1, 0, 10, 1, 0, 65546, 1, 0, 0, 1, 0, 655360, 1, 0, 720896, 1, 0, 1, 1, 0, 65537, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786436, 1, 0, 786437, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, 589834, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 589824, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0)
layer_1/name = "cliff"
layer_1/tile_data = PackedInt32Array(262144, 196608, 5, 327680, 196608, 5, 393216, 196608, 5, 458752, 196608, 5, 589824, 196608, 5, 524288, 196608, 5, 655361, 131072, 4, 655360, 262144, 5, 655362, 131072, 4, 655363, 196608, 4, 720899, 196608, 5, 786435, 196608, 5, 786439, 65536, 5, 720903, 65536, 4, 655368, 65536, 5, 720904, 327680, 5, 589832, 65536, 4, 589833, 131072, 4, 131082, 65536, 5, 196618, 65536, 5, 262154, 65536, 5, 327690, 65536, 5, 393226, 65536, 5, 458762, 65536, 5, 524298, 65536, 5, 589834, 327680, 5, 10, 327680, 4, 65546, 65536, 5, 6, 131072, 6, 7, 131072, 6, 8, 131072, 6, 9, 131072, 6, 5, 131072, 6, 4, 131072, 6, 3, 131072, 6, 2, 131072, 6, 0, 262144, 4, 65536, 196608, 5, 131072, 196608, 5, 196608, 196608, 5, 1, 131072, 6, -65538, 131072, 5, -2, 131072, 5, -65537, 131072, 5, -1, 131072, 5, -131072, 131072, 5, -65536, 131072, 5, -131071, 131072, 5, -65535, 131072, 5, -131070, 131072, 5, -65534, 131072, 5, -131069, 131072, 5, -65533, 131072, 5, -131068, 131072, 5, -65532, 131072, 5, -131067, 131072, 5, -65531, 131072, 5, -131066, 131072, 5, -65530, 131072, 5, -131065, 131072, 5, -65529, 131072, 5, -131064, 131072, 5, -65528, 131072, 5, -131063, 131072, 5, -65527, 131072, 5, -131062, 131072, 5, -65526, 131072, 5, -131061, 131072, 5, -65525, 131072, 5, -131060, 131072, 5, -65524, 131072, 5, 11, 131072, 5, 65547, 131072, 5, 131083, 131072, 5, 196619, 131072, 5, 262155, 131072, 5, 327691, 131072, 5, 393227, 131072, 5, 458763, 131072, 5, 524299, 131072, 5, 589835, 131072, 5, 655371, 131072, 5, 720907, 131072, 5, 786443, 131072, 5, 851979, 131072, 5, 917515, 131072, 5, 12, 131072, 5, 65548, 131072, 5, 131084, 131072, 5, 196620, 131072, 5, 262156, 131072, 5, 327692, 131072, 5, 393228, 131072, 5, 458764, 131072, 5, 524300, 131072, 5, 589836, 131072, 5, 655372, 131072, 5, 720908, 131072, 5, 786444, 131072, 5, 851980, 131072, 5, 917516, 131072, 5, 655369, 131072, 5, 720905, 131072, 5, 786441, 131072, 5, 851977, 131072, 5, 917513, 131072, 5, 655370, 131072, 5, 720906, 131072, 5, 786442, 131072, 5, 851978, 131072, 5, 917514, 131072, 5, 786440, 131072, 5, 851976, 131072, 5, 917512, 131072, 5, 720896, 131072, 5, 786432, 131072, 5, 851968, 131072, 5, 917504, 131072, 5, 720897, 131072, 5, 786433, 131072, 5, 851969, 131072, 5, 917505, 131072, 5, 720898, 131072, 5, 786434, 131072, 5, 851970, 131072, 5, 917506, 131072, 5, 851971, 131072, 5, 917507, 131072, 5, 851972, 131072, 5, 917508, 131072, 5, 851973, 131072, 5, 917509, 131072, 5, 851974, 131072, 5, 917510, 131072, 5, 851975, 131072, 5, 917511, 131072, 5, 65534, 131072, 5, 131070, 131072, 5, 196606, 131072, 5, 262142, 131072, 5, 327678, 131072, 5, 393214, 131072, 5, 458750, 131072, 5, 524286, 131072, 5, 589822, 131072, 5, 655358, 131072, 5, 720894, 131072, 5, 786430, 131072, 5, 851966, 131072, 5, 917502, 131072, 5, 983038, 131072, 5, 65535, 131072, 5, 131071, 131072, 5, 196607, 131072, 5, 262143, 131072, 5, 327679, 131072, 5, 393215, 131072, 5, 458751, 131072, 5, 524287, 131072, 5, 589823, 131072, 5, 655359, 131072, 5, 720895, 131072, 5, 786431, 131072, 5, 851967, 131072, 5, 917503, 131072, 5, 983039, 131072, 5, -131059, 131072, 5, -131058, 131072, 5, -131057, 131072, 5, -131056, 131072, 5, -131055, 131072, 5, -131054, 131072, 5, -65523, 131072, 5, 13, 131072, 5, 65549, 131072, 5, 131085, 131072, 5, 196621, 131072, 5, 262157, 131072, 5, 327693, 131072, 5, 393229, 131072, 5, 458765, 131072, 5, 524301, 131072, 5, 589837, 131072, 5, 655373, 131072, 5, 720909, 131072, 5, 786445, 131072, 5, 851981, 131072, 5, 917517, 131072, 5, 983053, 131072, 5, 1048589, 131072, 5, -65522, 131072, 5, 14, 131072, 5, 65550, 131072, 5, 131086, 131072, 5, 196622, 131072, 5, 262158, 131072, 5, 327694, 131072, 5, 393230, 131072, 5, 458766, 131072, 5, 524302, 131072, 5, 589838, 131072, 5, 655374, 131072, 5, 720910, 131072, 5, 786446, 131072, 5, 851982, 131072, 5, 917518, 131072, 5, 983054, 131072, 5, 1048590, 131072, 5, -65521, 131072, 5, 15, 131072, 5, 65551, 131072, 5, 131087, 131072, 5, 196623, 131072, 5, 262159, 131072, 5, 327695, 131072, 5, 393231, 131072, 5, 458767, 131072, 5, 524303, 131072, 5, 589839, 131072, 5, 655375, 131072, 5, 720911, 131072, 5, 786447, 131072, 5, 851983, 131072, 5, 917519, 131072, 5, 983055, 131072, 5, 1048591, 131072, 5, -65520, 131072, 5, 16, 131072, 5, 65552, 131072, 5, 131088, 131072, 5, 196624, 131072, 5, 262160, 131072, 5, 327696, 131072, 5, 393232, 131072, 5, 458768, 131072, 5, 524304, 131072, 5, 589840, 131072, 5, 655376, 131072, 5, 720912, 131072, 5, 786448, 131072, 5, 851984, 131072, 5, 917520, 131072, 5, 983056, 131072, 5, 1048592, 131072, 5, -65519, 131072, 5, 17, 131072, 5, 65553, 131072, 5, 131089, 131072, 5, 196625, 131072, 5, 262161, 131072, 5, 327697, 131072, 5, 393233, 131072, 5, 458769, 131072, 5, 524305, 131072, 5, 589841, 131072, 5, 655377, 131072, 5, 720913, 131072, 5, 786449, 131072, 5, 851985, 131072, 5, 917521, 131072, 5, 983057, 131072, 5, 1048593, 131072, 5, -65518, 131072, 5, 18, 131072, 5, 65554, 131072, 5, 131090, 131072, 5, 196626, 131072, 5, 262162, 131072, 5, 327698, 131072, 5, 393234, 131072, 5, 458770, 131072, 5, 524306, 131072, 5, 589842, 131072, 5, 655378, 131072, 5, 720914, 131072, 5, 786450, 131072, 5, 851986, 131072, 5, 917522, 131072, 5, 983058, 131072, 5, 1048594, 131072, 5, -65517, 131072, 5, 19, 131072, 5, 65555, 131072, 5, 131091, 131072, 5, 196627, 131072, 5, 262163, 131072, 5, 327699, 131072, 5, 393235, 131072, 5, 458771, 131072, 5, 524307, 131072, 5, 589843, 131072, 5, 655379, 131072, 5, 720915, 131072, 5, 786451, 131072, 5, 851987, 131072, 5, 917523, 131072, 5, 983059, 131072, 5, 1048595, 131072, 5, -131053, 131072, 5, 1048574, 131072, 5, 1114110, 131072, 5, 1048575, 131072, 5, 1114111, 131072, 5, 983040, 131072, 5, 1048576, 131072, 5, 983041, 131072, 5, 1048577, 131072, 5, 983042, 131072, 5, 1048578, 131072, 5, 983043, 131072, 5, 1048579, 131072, 5, 983044, 131072, 5, 1048580, 131072, 5, 983045, 131072, 5, 1048581, 131072, 5, 983046, 131072, 5, 1048582, 131072, 5, 983047, 131072, 5, 1048583, 131072, 5, 983048, 131072, 5, 1048584, 131072, 5, 983049, 131072, 5, 1048585, 131072, 5, 983050, 131072, 5, 1048586, 131072, 5, 983051, 131072, 5, 1048587, 131072, 5, 983052, 131072, 5, 1048588, 131072, 5, -65546, 131072, 5, -10, 131072, 5, 65526, 131072, 5, 131062, 131072, 5, 196598, 131072, 5, 262134, 131072, 5, 327670, 131072, 5, 393206, 131072, 5, 458742, 131072, 5, 524278, 131072, 5, 589814, 131072, 5, 655350, 131072, 5, 720886, 131072, 5, 786422, 131072, 5, 851958, 131072, 5, 917494, 131072, 5, 983030, 131072, 5, 1048566, 131072, 5, 1114102, 131072, 5, -65545, 131072, 5, -9, 131072, 5, 65527, 131072, 5, 131063, 131072, 5, 196599, 131072, 5, 262135, 131072, 5, 327671, 131072, 5, 393207, 131072, 5, 458743, 131072, 5, 524279, 131072, 5, 589815, 131072, 5, 655351, 131072, 5, 720887, 131072, 5, 786423, 131072, 5, 851959, 131072, 5, 917495, 131072, 5, 983031, 131072, 5, 1048567, 131072, 5, 1114103, 131072, 5, -65544, 131072, 5, -8, 131072, 5, 65528, 131072, 5, 131064, 131072, 5, 196600, 131072, 5, 262136, 131072, 5, 327672, 131072, 5, 393208, 131072, 5, 458744, 131072, 5, 524280, 131072, 5, 589816, 131072, 5, 655352, 131072, 5, 720888, 131072, 5, 786424, 131072, 5, 851960, 131072, 5, 917496, 131072, 5, 983032, 131072, 5, 1048568, 131072, 5, 1114104, 131072, 5, -65543, 131072, 5, -7, 131072, 5, 65529, 131072, 5, 131065, 131072, 5, 196601, 131072, 5, 262137, 131072, 5, 327673, 131072, 5, 393209, 131072, 5, 458745, 131072, 5, 524281, 131072, 5, 589817, 131072, 5, 655353, 131072, 5, 720889, 131072, 5, 786425, 131072, 5, 851961, 131072, 5, 917497, 131072, 5, 983033, 131072, 5, 1048569, 131072, 5, 1114105, 131072, 5, -65542, 131072, 5, -6, 131072, 5, 65530, 131072, 5, 131066, 131072, 5, 196602, 131072, 5, 262138, 131072, 5, 327674, 131072, 5, 393210, 131072, 5, 458746, 131072, 5, 524282, 131072, 5, 589818, 131072, 5, 655354, 131072, 5, 720890, 131072, 5, 786426, 131072, 5, 851962, 131072, 5, 917498, 131072, 5, 983034, 131072, 5, 1048570, 131072, 5, 1114106, 131072, 5, -65541, 131072, 5, -5, 131072, 5, 65531, 131072, 5, 131067, 131072, 5, 196603, 131072, 5, 262139, 131072, 5, 327675, 131072, 5, 393211, 131072, 5, 458747, 131072, 5, 524283, 131072, 5, 589819, 131072, 5, 655355, 131072, 5, 720891, 131072, 5, 786427, 131072, 5, 851963, 131072, 5, 917499, 131072, 5, 983035, 131072, 5, 1048571, 131072, 5, 1114107, 131072, 5, -65540, 131072, 5, -4, 131072, 5, 65532, 131072, 5, 131068, 131072, 5, 196604, 131072, 5, 262140, 131072, 5, 327676, 131072, 5, 393212, 131072, 5, 458748, 131072, 5, 524284, 131072, 5, 589820, 131072, 5, 655356, 131072, 5, 720892, 131072, 5, 786428, 131072, 5, 851964, 131072, 5, 917500, 131072, 5, 983036, 131072, 5, 1048572, 131072, 5, 1114108, 131072, 5, -65539, 131072, 5, -3, 131072, 5, 65533, 131072, 5, 131069, 131072, 5, 196605, 131072, 5, 262141, 131072, 5, 327677, 131072, 5, 393213, 131072, 5, 458749, 131072, 5, 524285, 131072, 5, 589821, 131072, 5, 655357, 131072, 5, 720893, 131072, 5, 786429, 131072, 5, 851965, 131072, 5, 917501, 131072, 5, 983037, 131072, 5, 1048573, 131072, 5, 1114109, 131072, 5, -458762, 131072, 5, -393226, 131072, 5, -327690, 131072, 5, -262154, 131072, 5, -196618, 131072, 5, -131082, 131072, 5, -458761, 131072, 5, -393225, 131072, 5, -327689, 131072, 5, -262153, 131072, 5, -196617, 131072, 5, -131081, 131072, 5, -458760, 131072, 5, -393224, 131072, 5, -327688, 131072, 5, -262152, 131072, 5, -196616, 131072, 5, -131080, 131072, 5, -458759, 131072, 5, -393223, 131072, 5, -327687, 131072, 5, -262151, 131072, 5, -196615, 131072, 5, -131079, 131072, 5, -458758, 131072, 5, -393222, 131072, 5, -327686, 131072, 5, -262150, 131072, 5, -196614, 131072, 5, -131078, 131072, 5, -458757, 131072, 5, -393221, 131072, 5, -327685, 131072, 5, -262149, 131072, 5, -196613, 131072, 5, -131077, 131072, 5, -458756, 131072, 5, -393220, 131072, 5, -327684, 131072, 5, -262148, 131072, 5, -196612, 131072, 5, -131076, 131072, 5, -458755, 131072, 5, -393219, 131072, 5, -327683, 131072, 5, -262147, 131072, 5, -196611, 131072, 5, -131075, 131072, 5, -458754, 131072, 5, -393218, 131072, 5, -327682, 131072, 5, -262146, 131072, 5, -196610, 131072, 5, -131074, 131072, 5, -458753, 131072, 5, -393217, 131072, 5, -327681, 131072, 5, -262145, 131072, 5, -196609, 131072, 5, -131073, 131072, 5, -524288, 131072, 5, -458752, 131072, 5, -393216, 131072, 5, -327680, 131072, 5, -262144, 131072, 5, -196608, 131072, 5, -524287, 131072, 5, -458751, 131072, 5, -393215, 131072, 5, -327679, 131072, 5, -262143, 131072, 5, -196607, 131072, 5, -524286, 131072, 5, -458750, 131072, 5, -393214, 131072, 5, -327678, 131072, 5, -262142, 131072, 5, -196606, 131072, 5, -524285, 131072, 5, -458749, 131072, 5, -393213, 131072, 5, -327677, 131072, 5, -262141, 131072, 5, -196605, 131072, 5, -524284, 131072, 5, -458748, 131072, 5, -393212, 131072, 5, -327676, 131072, 5, -262140, 131072, 5, -196604, 131072, 5, -524283, 131072, 5, -458747, 131072, 5, -393211, 131072, 5, -327675, 131072, 5, -262139, 131072, 5, -196603, 131072, 5, -524282, 131072, 5, -458746, 131072, 5, -393210, 131072, 5, -327674, 131072, 5, -262138, 131072, 5, -196602, 131072, 5, -524281, 131072, 5, -458745, 131072, 5, -393209, 131072, 5, -327673, 131072, 5, -262137, 131072, 5, -196601, 131072, 5, -524280, 131072, 5, -458744, 131072, 5, -393208, 131072, 5, -327672, 131072, 5, -262136, 131072, 5, -196600, 131072, 5, -524279, 131072, 5, -458743, 131072, 5, -393207, 131072, 5, -327671, 131072, 5, -262135, 131072, 5, -196599, 131072, 5, -524278, 131072, 5, -458742, 131072, 5, -393206, 131072, 5, -327670, 131072, 5, -262134, 131072, 5, -196598, 131072, 5, -524277, 131072, 5, -458741, 131072, 5, -393205, 131072, 5, -327669, 131072, 5, -262133, 131072, 5, -196597, 131072, 5, -524276, 131072, 5, -458740, 131072, 5, -393204, 131072, 5, -327668, 131072, 5, -262132, 131072, 5, -196596, 131072, 5, -524275, 131072, 5, -458739, 131072, 5, -393203, 131072, 5, -327667, 131072, 5, -262131, 131072, 5, -196595, 131072, 5, -524274, 131072, 5, -458738, 131072, 5, -393202, 131072, 5, -327666, 131072, 5, -262130, 131072, 5, -196594, 131072, 5, -524273, 131072, 5, -458737, 131072, 5, -393201, 131072, 5, -327665, 131072, 5, -262129, 131072, 5, -196593, 131072, 5, -524272, 131072, 5, -458736, 131072, 5, -393200, 131072, 5, -327664, 131072, 5, -262128, 131072, 5, -196592, 131072, 5, -524271, 131072, 5, -458735, 131072, 5, -393199, 131072, 5, -327663, 131072, 5, -262127, 131072, 5, -196591, 131072, 5, -524270, 131072, 5, -458734, 131072, 5, -393198, 131072, 5, -327662, 131072, 5, -262126, 131072, 5, -196590, 131072, 5, -524269, 131072, 5, -458733, 131072, 5, -393197, 131072, 5, -327661, 131072, 5, -262125, 131072, 5, -196589, 131072, 5, 1179638, 131072, 5, 1245174, 131072, 5, 1310710, 131072, 5, 1376246, 131072, 5, 1441782, 131072, 5, 1507318, 131072, 5, 1179639, 131072, 5, 1245175, 131072, 5, 1310711, 131072, 5, 1376247, 131072, 5, 1441783, 131072, 5, 1507319, 131072, 5, 1179640, 131072, 5, 1245176, 131072, 5, 1310712, 131072, 5, 1376248, 131072, 5, 1441784, 131072, 5, 1507320, 131072, 5, 1179641, 131072, 5, 1245177, 131072, 5, 1310713, 131072, 5, 1376249, 131072, 5, 1441785, 131072, 5, 1507321, 131072, 5, 1179642, 131072, 5, 1245178, 131072, 5, 1310714, 131072, 5, 1376250, 131072, 5, 1441786, 131072, 5, 1507322, 131072, 5, 1179643, 131072, 5, 1245179, 131072, 5, 1310715, 131072, 5, 1376251, 131072, 5, 1441787, 131072, 5, 1507323, 131072, 5, 1179644, 131072, 5, 1245180, 131072, 5, 1310716, 131072, 5, 1376252, 131072, 5, 1441788, 131072, 5, 1507324, 131072, 5, 1179645, 131072, 5, 1245181, 131072, 5, 1310717, 131072, 5, 1376253, 131072, 5, 1441789, 131072, 5, 1507325, 131072, 5, 1179646, 131072, 5, 1245182, 131072, 5, 1310718, 131072, 5, 1376254, 131072, 5, 1441790, 131072, 5, 1507326, 131072, 5, 1179647, 131072, 5, 1245183, 131072, 5, 1310719, 131072, 5, 1376255, 131072, 5, 1441791, 131072, 5, 1507327, 131072, 5, 1114112, 131072, 5, 1179648, 131072, 5, 1245184, 131072, 5, 1310720, 131072, 5, 1376256, 131072, 5, 1441792, 131072, 5, 1114113, 131072, 5, 1179649, 131072, 5, 1245185, 131072, 5, 1310721, 131072, 5, 1376257, 131072, 5, 1441793, 131072, 5, 1114114, 131072, 5, 1179650, 131072, 5, 1245186, 131072, 5, 1310722, 131072, 5, 1376258, 131072, 5, 1441794, 131072, 5, 1114115, 131072, 5, 1179651, 131072, 5, 1245187, 131072, 5, 1310723, 131072, 5, 1376259, 131072, 5, 1441795, 131072, 5, 1114116, 131072, 5, 1179652, 131072, 5, 1245188, 131072, 5, 1310724, 131072, 5, 1376260, 131072, 5, 1441796, 131072, 5, 1114117, 131072, 5, 1179653, 131072, 5, 1245189, 131072, 5, 1310725, 131072, 5, 1376261, 131072, 5, 1441797, 131072, 5, 1114118, 131072, 5, 1179654, 131072, 5, 1245190, 131072, 5, 1310726, 131072, 5, 1376262, 131072, 5, 1441798, 131072, 5, 1114119, 131072, 5, 1179655, 131072, 5, 1245191, 131072, 5, 1310727, 131072, 5, 1376263, 131072, 5, 1441799, 131072, 5, 1114120, 131072, 5, 1179656, 131072, 5, 1245192, 131072, 5, 1310728, 131072, 5, 1376264, 131072, 5, 1441800, 131072, 5, 1114121, 131072, 5, 1179657, 131072, 5, 1245193, 131072, 5, 1310729, 131072, 5, 1376265, 131072, 5, 1441801, 131072, 5, 1114122, 131072, 5, 1179658, 131072, 5, 1245194, 131072, 5, 1310730, 131072, 5, 1376266, 131072, 5, 1441802, 131072, 5, 1114123, 131072, 5, 1179659, 131072, 5, 1245195, 131072, 5, 1310731, 131072, 5, 1376267, 131072, 5, 1441803, 131072, 5, 1114124, 131072, 5, 1179660, 131072, 5, 1245196, 131072, 5, 1310732, 131072, 5, 1376268, 131072, 5, 1441804, 131072, 5, 1114125, 131072, 5, 1179661, 131072, 5, 1245197, 131072, 5, 1310733, 131072, 5, 1376269, 131072, 5, 1441805, 131072, 5, 1114126, 131072, 5, 1179662, 131072, 5, 1245198, 131072, 5, 1310734, 131072, 5, 1376270, 131072, 5, 1441806, 131072, 5, 1114127, 131072, 5, 1179663, 131072, 5, 1245199, 131072, 5, 1310735, 131072, 5, 1376271, 131072, 5, 1441807, 131072, 5, 1114128, 131072, 5, 1179664, 131072, 5, 1245200, 131072, 5, 1310736, 131072, 5, 1376272, 131072, 5, 1441808, 131072, 5, 1114129, 131072, 5, 1179665, 131072, 5, 1245201, 131072, 5, 1310737, 131072, 5, 1376273, 131072, 5, 1441809, 131072, 5, 1114130, 131072, 5, 1179666, 131072, 5, 1245202, 131072, 5, 1310738, 131072, 5, 1376274, 131072, 5, 1441810, 131072, 5, 1114131, 131072, 5, 1179667, 131072, 5, 1245203, 131072, 5, 1310739, 131072, 5, 1376275, 131072, 5, 1441811, 131072, 5)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true

[node name="collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(15, 17, 160, 17, 161, 146, 137, 147, 131, 155, 131, 177, 120, 180, 115, 188, 114, 208, 63, 208, 63, 172, 57, 162, 16, 162, 13, 16, 7, 11, 8, 222, 180, 222, 180, 9, 10, 9)

[node name="heal" type="Sprite2D" parent="."]
position = Vector2(95, 117)
texture = ExtResource("5_r8uvg")

[node name="heal_area" type="Area2D" parent="heal"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="heal/heal_area"]
position = Vector2(-2.5, -4.5)
shape = SubResource("RectangleShape2D_d76bt")

[node name="heal_taken" type="AudioStreamPlayer" parent="heal"]
stream = ExtResource("6_ueo2y")

[node name="player" parent="." instance=ExtResource("7_1ucc3")]
position = Vector2(89, 186)

[node name="exit_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit_point"]
position = Vector2(89, 199.75)
shape = SubResource("RectangleShape2D_qjrdw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1jtjd")
}

[connection signal="body_entered" from="heal/heal_area" to="." method="_on_heal_area_body_entered"]
[connection signal="body_entered" from="exit_point" to="." method="_on_exit_point_body_entered"]
[connection signal="body_exited" from="exit_point" to="." method="_on_exit_point_body_exited"]
